text spacing issue fix

--- a/app/assets/css/follow-up.css
+++ b/app/assets/css/follow-up.css
@@ -90,7 +90,7 @@ ul#chat-UI {
 	width: 100%;
 }
 .messages p {
-	margin: 0 0 0.2rem 0;
+	margin: 0 0 1.5rem 0;
 }
 .messages time {
 	color: #777;
